--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -7,8 +7,7 @@
 body header #nav nav {
   width: 100%;
   height: 60px;
-  background-color: aqua;
-  padding: 0px 120px;
+  padding: 0px 140px;
   display: flex;
   justify-content: space-between;
 }
@@ -17,17 +16,35 @@ body header #nav nav .logo {
   float: left;
   display: flex;
   justify-content: start;
+  font-size: 10px;
 }
 body header #nav nav .logo .logo-picture {
-  width: 100px;
-  height: 60px;
-  background-color: beige;
-  margin-right: 15px;
+  width: 138px;
+  margin-right: 40px;
+  display: flex;
+  align-items: center;
+}
+body header #nav nav .logo .logo-picture img {
+  width: 120px;
+}
+body header #nav nav .logo .logo-picture:hover {
+  cursor: pointer;
 }
 body header #nav nav .logo .link {
   line-height: 60px;
   height: 60px;
-  margin-right: 15px;
+  margin-right: 20px;
+  padding: 0px 10px;
+  border: 1px solid rgba(0, 0, 0, 0);
+}
+body header #nav nav .logo .link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 2px;
+  cursor: pointer;
+}
+body header #nav nav .logo .link:active {
+  border: 1px dashed #000;
 }
 body header #nav nav .search-login {
   height: 60px;
@@ -39,13 +56,26 @@ body header #nav nav .search-login .link {
   height: 60px;
   line-height: 60px;
   margin-right: 15px;
+  font-size: 10px;
+}
+body header #nav nav .search-login .link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 5px;
+  cursor: pointer;
+}
+body header #nav nav .search-login .search {
+  margin-right: 60px;
 }
 body header #nav nav .search-login .login {
-  width: 80px;
+  width: 65px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 body header #nav nav .search-login .login img {
   height: 30px;
+}
+body header #nav nav .search-login .login:hover {
+  text-decoration: none;
 }/*# sourceMappingURL=microsoft.css.map */
