--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -12,31 +12,54 @@ body {
             nav {
                 width: 100%;
                 height: 60px;
-                background-color: aqua;
-                padding: 0px 120px;
+                // background-color: aqua;
+                padding: 0px 140px;
                 display: flex;
                 justify-content: space-between;
 
                 .logo {
                     // width: calc(100% / 2);
                     height: 60px;
-                    // background-color: brown;
+
                     float: left;
                     display: flex;
                     justify-content: start;
+                    font-size: 10px;
 
                     .logo-picture {
-                        width: 100px;
-                        height: 60px;
-                        background-color: beige;
-                        margin-right: 15px;
+                        width: 138px;
+                        // height: 60px;
+                        // background-color: beige;
+                        margin-right: 40px;
+                        display: flex;
+                        align-items: center;
+
+                        img {
+                            width: 120px;
+                            // height: 60px;
+
+                        }
+                        &:hover{
+                            cursor: pointer;
+                        }
                     }
 
                     .link {
                         line-height: 60px;
                         height: 60px;
                         // background-color: coral;
-                        margin-right: 15px;
+                        margin-right: 20px;
+                        padding: 0px 10px;
+                        border: 1px solid rgba($color: #000000, $alpha: 0);
+                        &:hover{
+                            text-decoration: underline;
+                            text-decoration-thickness: 2px;
+                            text-underline-offset:2px;
+                            cursor: pointer;
+                        }
+                        &:active{
+                            border: 1px dashed #000;
+                        }
                     }
 
                 }
@@ -53,15 +76,30 @@ body {
                         height: 60px;
                         line-height: 60px;
                         margin-right: 15px;
+                        font-size: 10px;
+                        &:hover{
+                            text-decoration: underline;
+                            text-decoration-thickness: 2px;
+                            text-underline-offset:5px;
+                            cursor: pointer;
+                        }
                     }
+                    .search{
+                        margin-right: 60px;
+                    }
+                    
 
                     .login {
-                        width: 80px;
+                        width: 65px;
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
-                        img{
+
+                        img {
                             height: 30px;
+                        }
+                        &:hover{
+                            text-decoration: none;
                         }
                     }
 
