--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -20,6 +20,8 @@ body header #nav nav .logo {
 }
 body header #nav nav .logo .logo-picture {
   width: 138px;
+  padding-left: 5px;
+  border: 1px solid rgba(0, 0, 0, 0);
   margin-right: 40px;
   display: flex;
   align-items: center;
@@ -30,20 +32,29 @@ body header #nav nav .logo .logo-picture img {
 body header #nav nav .logo .logo-picture:hover {
   cursor: pointer;
 }
-body header #nav nav .logo .link {
+body header #nav nav .logo .logo-picture:active {
+  border: 1px dashed #000;
+}
+body header #nav nav .logo .connect {
+  padding-top: 2px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: start;
+}
+body header #nav nav .logo .connect .link {
   line-height: 60px;
-  height: 60px;
+  height: 100%;
   margin-right: 20px;
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
-body header #nav nav .logo .link:hover {
+body header #nav nav .logo .connect .link:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 2px;
   cursor: pointer;
 }
-body header #nav nav .logo .link:active {
+body header #nav nav .logo .connect .link:active {
   border: 1px dashed #000;
 }
 body header #nav nav .search-login {
@@ -57,6 +68,8 @@ body header #nav nav .search-login .link {
   line-height: 60px;
   margin-right: 15px;
   font-size: 10px;
+  padding: 0px 10px;
+  border: 1px solid rgba(0, 0, 0, 0);
 }
 body header #nav nav .search-login .link:hover {
   text-decoration: underline;
@@ -64,11 +77,14 @@ body header #nav nav .search-login .link:hover {
   text-underline-offset: 5px;
   cursor: pointer;
 }
+body header #nav nav .search-login .link:active {
+  border: 1px dashed #000;
+}
 body header #nav nav .search-login .search {
   margin-right: 60px;
 }
 body header #nav nav .search-login .login {
-  width: 65px;
+  width: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
