--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -63,11 +63,16 @@ body header #nav nav .search-login {
   display: flex;
   justify-content: end;
 }
+body header #nav nav .search-login .all i {
+  position: absolute;
+  top: 30px;
+  font-size: 15px;
+}
 body header #nav nav .search-login .link {
   height: 60px;
   line-height: 60px;
   margin-right: 15px;
-  font-size: 10px;
+  font-size: 13px;
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
