--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -46,6 +46,7 @@ body {
                         &:hover {
                             cursor: pointer;
                         }
+
                         &:active {
                             border: 1px dashed #000;
                         }
@@ -91,11 +92,20 @@ body {
                     display: flex;
                     justify-content: end;
 
+                    .all {
+                        
+                        i {
+                            position: absolute;
+                            top: 30px;
+                            font-size: 15px;
+                        }
+                    }
+
                     .link {
                         height: 60px;
                         line-height: 60px;
                         margin-right: 15px;
-                        font-size: 10px;
+                        font-size: 13px;
                         padding: 0px 10px;
                         border: 1px solid rgba($color: #000000, $alpha: 0);
 
@@ -105,6 +115,7 @@ body {
                             text-underline-offset: 5px;
                             cursor: pointer;
                         }
+
                         &:active {
                             border: 1px dashed #000;
                         }
