--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -144,5 +144,12 @@ body {
                 }
             }
         }
+        .banner{
+            picture{
+                img{
+                    width: 100%;
+                }
+            }
+        }
     }
 }
