--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -7,7 +7,7 @@
 body header #nav nav {
   width: 100%;
   height: 60px;
-  padding: 0px 140px;
+  padding: 0px 8%;
   display: flex;
   justify-content: space-between;
 }
@@ -47,6 +47,10 @@ body header #nav nav .logo .connect .link {
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
+body header #nav nav .logo .connect .link a {
+  color: #000;
+  text-decoration: none;
+}
 body header #nav nav .logo .connect .link:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
@@ -75,6 +79,10 @@ body header #nav nav .search-login .link {
   padding: 0px 10px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
+body header #nav nav .search-login .link a {
+  color: #000;
+  text-decoration: none;
+}
 body header #nav nav .search-login .link:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
@@ -99,36 +107,97 @@ body header #nav nav .search-login .login img {
 body header #nav nav .search-login .login:hover {
   text-decoration: none;
 }
-body main picture {
+body main .banner {
   position: relative;
 }
-body main picture img {
+body main .banner picture img {
   width: 100%;
 }
-body main picture .picture-word {
+body main .banner .picture-word-shell {
+  width: 100%;
   position: absolute;
-  bottom: 210px;
-  left: 10%;
-  width: 30%;
-  padding: 20px;
+  top: 0px;
+  padding-left: 10%;
+  padding-top: 10%;
 }
-body main picture .picture-word .news-release {
+body main .banner .picture-word-shell .picture-word {
+  width: 30%;
+}
+body main .banner .picture-word-shell .picture-word .news-release {
   display: inline-block;
   padding: 5px 15px;
   background-color: #ffb900;
   margin-bottom: 15px;
 }
-body main picture .picture-word h1 {
+body main .banner .picture-word-shell .picture-word h1 {
   font-size: 40px;
   margin-bottom: 15px;
 }
-body main picture .picture-word .describe {
+body main .banner .picture-word-shell .picture-word .describe {
   margin-bottom: 15px;
 }
-body main picture .picture-word button {
+body main .banner .picture-word-shell .picture-word button {
   border: 0px;
   background-color: #0067b8;
   color: white;
   font-size: 15px;
   padding: 10px 15px;
+}
+body main .carousel-button {
+  width: 100%;
+  height: 50px;
+  background-color: bisque;
+}
+body main .container-top {
+  padding-top: 50px;
+  margin-bottom: 80px;
+}
+body main .container-top ul {
+  width: 100%;
+  height: 100px;
+  background-color: burlywood;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  list-style-type: none;
+}
+body main .container-top ul li {
+  width: 200px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+body main .container-top ul li img {
+  width: 40px;
+  height: 40px;
+}
+body main .container-top ul li a {
+  color: #0067b8;
+}
+body main .container-mid {
+  display: flex;
+  justify-content: center;
+  padding: 0px 80px;
+}
+body main .container-mid .commodity {
+  width: calc((100% - 160px) / 4);
+  padding: 0px 12px;
+}
+body main .container-mid .commodity img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+body main .container-mid .commodity .word h2 {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+body main .container-mid .commodity .link-group {
+  margin-top: 20px;
+}
+body main .container-mid .commodity .link-group a {
+  color: #0067b8;
+  text-decoration: none;
+  margin: 16px 24px 16px 0px;
 }/*# sourceMappingURL=microsoft.css.map */
