--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -13,7 +13,7 @@ body {
                 width: 100%;
                 height: 60px;
                 // background-color: aqua;
-                padding: 0px 140px;
+                padding: 0px 8%;
                 display: flex;
                 justify-content: space-between;
 
@@ -67,6 +67,11 @@ body {
                             padding: 0px 10px;
                             border: 1px solid rgba($color: #000000, $alpha: 0);
 
+                            a {
+                                color: #000;
+                                text-decoration: none;
+                            }
+
                             &:hover {
                                 text-decoration: underline;
                                 text-decoration-thickness: 2px;
@@ -109,6 +114,11 @@ body {
                         padding: 0px 10px;
                         border: 1px solid rgba($color: #000000, $alpha: 0);
 
+                        a {
+                            color: #000;
+                            text-decoration: none;
+                        }
+
                         &:hover {
                             text-decoration: underline;
                             text-decoration-thickness: 2px;
@@ -147,48 +157,132 @@ body {
     }
 
     main {
-        picture {
+        .banner {
             position: relative;
+            // display: flex;
 
-            img {
+            picture {
+
+                img {
+                    width: 100%;
+                }
+
+            }
+
+            .picture-word-shell {
                 width: 100%;
-            }
-
-            .picture-word {
                 position: absolute;
-                bottom: 210px;
-                left: 10%;
-                width: 30%;
-                padding: 20px;
+                top: 0px;
+                padding-left: 10%;
+                padding-top: 10%;
 
-                .news-release {
-                    display: inline-block;
-                    padding: 5px 15px;
-                    background-color: #ffb900;
-                    margin-bottom: 15px;
-                }
+                .picture-word {
+                    width: 30%;
 
-                h1 {
-                    font-size: 40px;
-                    margin-bottom: 15px;
-                }
+                    .news-release {
+                        display: inline-block;
+                        padding: 5px 15px;
+                        background-color: #ffb900;
+                        margin-bottom: 15px;
+                    }
 
-                .describe {
-                    margin-bottom: 15px;
-                }
+                    h1 {
+                        font-size: 40px;
+                        margin-bottom: 15px;
+                    }
 
-                button {
-                    border: 0px;
-                    background-color: #0067b8;
-                    color: white;
-                    font-size: 15px;
-                    padding: 10px 15px;
+                    .describe {
+                        margin-bottom: 15px;
+                    }
+
+                    button {
+                        border: 0px;
+                        background-color: #0067b8;
+                        color: white;
+                        font-size: 15px;
+                        padding: 10px 15px;
+                    }
                 }
             }
-
-
-
-
         }
+
+        .carousel-button {
+            width: 100%;
+            height: 50px;
+            background-color: bisque;
+        }
+
+        .container-top {
+            padding-top: 50px;
+            margin-bottom: 80px;
+
+            ul {
+                width: 100%;
+                height: 100px;
+                background-color: burlywood;
+                display: flex;
+                justify-content: center;
+                text-align: center;
+                list-style-type: none;
+
+
+
+                li {
+                    width: 200px;
+                    height: 100px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: center;
+
+                    img {
+                        width: 40px;
+                        height: 40px;
+                    }
+
+                    a {
+                        color: #0067b8;
+                    }
+                }
+
+
+
+
+            }
+        }
+
+        .container-mid {
+            display: flex;
+            justify-content: center;
+            padding: 0px 80px;
+
+            .commodity {
+                width: calc(calc(100% - 160px) / 4);
+                padding: 0px 12px;
+
+                img {
+                    width: 100%;
+                    margin-bottom: 20px;
+                }
+                .word {
+
+                    h2 {
+                        font-size: 30px;
+                        margin-bottom: 20px;
+                    }
+                }
+                .link-group{
+                    margin-top: 20px;
+                    a{
+                        color: #0067b8;
+                        text-decoration: none;
+                        margin: 16px 24px 16px 0px;
+                        // display: block;
+                    }
+                    
+                }
+            }
+        }
+
     }
 }
