--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -195,7 +195,8 @@ body {
                         margin-bottom: 15px;
                     }
 
-                    button {
+                    p {
+                        display: inline-block;
                         border: 0px;
                         background-color: #0067b8;
                         color: white;
@@ -219,7 +220,7 @@ body {
             ul {
                 width: 100%;
                 height: 100px;
-                background-color: burlywood;
+                // background-color: burlywood;
                 display: flex;
                 justify-content: center;
                 text-align: center;
@@ -254,16 +255,20 @@ body {
         .container-mid {
             display: flex;
             justify-content: center;
-            padding: 0px 80px;
+            padding: 0px 10%;
+            margin: 50px 0px;
+            display: flex;
+            justify-content: space-between;
 
             .commodity {
-                width: calc(calc(100% - 160px) / 4);
-                padding: 0px 12px;
+                width: calc(calc(100% / 4) - 12px);
+
 
                 img {
                     width: 100%;
                     margin-bottom: 20px;
                 }
+
                 .word {
 
                     h2 {
@@ -271,15 +276,139 @@ body {
                         margin-bottom: 20px;
                     }
                 }
-                .link-group{
+
+                .link-group {
                     margin-top: 20px;
-                    a{
+
+                    a {
+                        font-size: 18px;
                         color: #0067b8;
                         text-decoration: none;
                         margin: 16px 24px 16px 0px;
-                        // display: block;
+                        display: block;
+                        width: fit-content;
+                        float: left;
                     }
-                    
+
+                }
+            }
+        }
+
+        .banner-2 {
+            width: 100%;
+            margin: 50px 0px 80px;
+            padding: 0px 10%;
+            position: relative;
+
+            picture {
+                img {
+
+                    width: 100%;
+                }
+            }
+
+            .picture-word-shell {
+                width: calc(100% - 150px);
+                position: absolute;
+                top: 0;
+                padding-left: 5%;
+                padding-top: 10%;
+
+                .picture-word {
+                    width: 24%;
+
+
+                    h1 {
+                        font-size: 40px;
+                        margin-bottom: 15px;
+                    }
+
+                    .describe {
+                        margin-bottom: 15px;
+                    }
+
+                    button {
+                        border: 0px;
+                        background-color: #0067b8;
+                        color: white;
+                        font-size: 15px;
+                        padding: 10px 15px;
+                    }
+                }
+            }
+        }
+
+        .container-bot {
+            padding: 0px 10%;
+            
+
+            h1 {
+                margin-bottom: 20px;
+            }
+
+            .information {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+
+                .card {
+                    width: calc(calc(100% / 4) - 12px);
+                    margin-bottom: 60px;
+
+                    // padding: 0px 12px;
+
+                    ul {
+                        list-style-type: none;
+                        float: left;
+
+                        li {
+                            display: inline-block;
+                            padding: 5px 15px;
+                            background-color: #ffb900;
+
+                        }
+                    }
+
+                    picture {
+                        img {
+                            width: 100%;
+                            margin-bottom: 15px;
+                        }
+                    }
+
+                    .word {
+                        h2 {
+                            font-size: 30px;
+                            margin: 40px 0px 20px;
+                        }
+
+                        p {}
+
+                        a {
+                            margin-top: 20px;
+                            font-size: 18px;
+                            color: #0067b8;
+                            text-decoration: none;
+                            display: block;
+                            width: fit-content;
+                        }
+                    }
+                }
+            }
+            .community{
+                margin-bottom: 100px;
+                ul{
+                    width: 200px;
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    li{
+                        list-style-type: none;
+                    }
+                    img{
+                        width: 32px;
+                        height: 32px;
+                    }
                 }
             }
         }
