--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -96,11 +96,7 @@ body {
 
                     .all {
 
-                        i {
-                            // position: absolute;
-                            // top: 30px;
-                            // font-size: 15px;
-                        }
+                        
                     }
 
                     .link {
@@ -137,6 +133,7 @@ body {
 
                     .search {
                         margin-right: 8%;
+
                         @media (max-width:1400px) {
                             margin: 0px;
                         }
@@ -164,6 +161,7 @@ body {
                         &:hover {
                             text-decoration: none;
                         }
+
                         @media (max-width:1400px) {
                             display: flex;
                             justify-content: center;
@@ -206,7 +204,7 @@ body {
                     }
 
                     h1 {
-                        font-size: 40px;
+                        font-size: 37px;
                         margin-bottom: 15px;
                     }
 
@@ -222,7 +220,33 @@ body {
                         font-size: 15px;
                         padding: 10px 15px;
                     }
+                    @media(max-width:1086px) {
+                        width: 100%;
+                        background-color: white;
+                        padding: 48px;
+                        box-shadow: 0px 0px 8px rgb(107, 107, 107);
+                    }
+
+                    @media(max-width:860px) {
+                        
+                        box-shadow: 0px 4px 5px rgba(107, 107, 107, 0.39);
+                    }
                 }
+                @media(max-width:1086px) {
+
+                    position: absolute;
+                    top: 90%;
+                    padding: 0px 12px;
+                    width: 100%;
+                    // background-color: rgb(197, 17, 17);
+                }
+                @media(max-width:860px) {
+
+                    position: unset;
+                    padding: 0px;
+                    
+                }
+
             }
         }
 
@@ -230,6 +254,13 @@ body {
             width: 100%;
             height: 50px;
             background-color: bisque;
+
+            @media(max-width:1086px) {
+                margin-bottom: 200px;
+            }
+            @media(max-width:860px) {
+                display:none;
+            }
         }
 
         .container-top {
@@ -244,6 +275,7 @@ body {
                 justify-content: center;
                 text-align: center;
                 list-style-type: none;
+                flex-wrap: wrap;
 
 
 
@@ -254,6 +286,7 @@ body {
                     flex-direction: column;
                     justify-content: space-evenly;
                     align-items: center;
+                    margin-bottom: 20px;
 
                     img {
                         width: 40px;
@@ -276,37 +309,45 @@ body {
             justify-content: center;
             padding: 0px 5%;
             margin: 50px 0px;
-            .outer-frame{
-                
+
+            .outer-frame {
+
                 display: flex;
                 justify-content: space-between;
+
                 .commodity {
                     width: calc(calc(100% / 4) - 12px);
-    
+
                     picture {
-    
+
                         img {
                             width: 100%;
                             margin-bottom: 20px;
                         }
                     }
-    
-    
+
+
                     .word {
                         margin-bottom: 20px;
-    
+
                         h2 {
                             font-size: 30px;
                             margin-bottom: 20px;
+
                             @media (max-width:1400px) {
                                 font-size: 25px;
                             }
+
+                            @media (max-width:1086px) {
+                                font-size: 21px;
+                            }
+
                         }
                     }
-    
+
                     .link-group {
-    
-    
+
+
                         a {
                             font-size: 18px;
                             color: #0067b8;
@@ -315,31 +356,42 @@ body {
                             display: block;
                             width: fit-content;
                             float: left;
-    
+
                             &:hover {
                                 text-decoration: underline;
-    
+
                             }
-    
+
                             &::after {
                                 content: ">";
-    
+
                             }
-    
+
+                            @media (max-width:1086px) {
+                                font-size: 16px;
+                            }
+
                         }
-    
+
                     }
-                    @media(max-width:1086px){
+
+                    @media(max-width:1086px) {
                         width: calc(100% / 2);
                         padding: 0px 12px;
                     }
+                    @media(max-width:540px) {
+                        width:100%;
+                        padding: 0px 12px;
+                    }
                 }
-                @media(max-width:1086px){
+
+                @media(max-width:1086px) {
                     display: flex;
                     flex-wrap: wrap;
                 }
             }
-            @media(max-width:1086px){
+
+            @media(max-width:1086px) {
                 padding: 0px;
             }
 
@@ -372,9 +424,11 @@ body {
                     h1 {
                         font-size: 40px;
                         margin-bottom: 15px;
+
                         @media (max-width:1400px) {
                             font-size: 25px;
                         }
+                        
                     }
 
                     .describe {
@@ -388,11 +442,46 @@ body {
                         font-size: 15px;
                         padding: 10px 15px;
                     }
-                    
+
+                    @media(max-width:1086px) {
+                        width: 100%;
+                        background-color: white;
+                        padding: 48px;
+                        box-shadow: 0px 0px 8px rgb(107, 107, 107);
+                        
+                    }
+                    @media(max-width:860px) {
+                        padding: 48px 12px;
+                        box-shadow: 0px 0px 0px rgb(107, 107, 107);
+                        
+                    }
+                }
+
+                @media(max-width:1086px) {
+
+                    position: absolute;
+                    top: 95%;
+                    padding: 0px 12px;
+                    width: 100%;
+                    // background-color: rgb(197, 17, 17);
+                }
+                @media(max-width:860px) {
+                    position: unset;;
+                    padding: 0px;
+                    width: 100%;
+                    // background-color: rgb(197, 17, 17);
                 }
             }
-            @media(max-width:1086px){
+
+            @media(max-width:1086px) {
                 padding: 0px;
+            }
+
+            @media(max-width:1086px) {
+                margin-bottom: 300px;
+            }
+            @media(max-width:860px) {
+                margin-bottom: 20px;
             }
         }
 
@@ -402,6 +491,11 @@ body {
 
             h1 {
                 margin-bottom: 20px;
+
+                @media (max-width:1086px) {
+                    padding-left: 12px;
+                    font-size: 24px;
+                }
             }
 
             .information {
@@ -438,8 +532,13 @@ body {
                         h2 {
                             font-size: 30px;
                             margin: 40px 0px 20px;
+
                             @media (max-width:1400px) {
                                 font-size: 25px;
+                            }
+
+                            @media (max-width:1086px) {
+                                font-size: 21px;
                             }
                         }
 
@@ -458,8 +557,27 @@ body {
                             &:hover {
                                 text-decoration: underline;
                             }
+
+                            @media (max-width:1086px) {
+                                font-size: 16px;
+                            }
                         }
                     }
+
+                    @media(max-width:1086px) {
+                        width: calc(100% / 2);
+                        padding: 0px 12px;
+                    }
+                    
+                    @media(max-width:540px) {
+                        width:100%;
+                        padding: 0px 12px;
+                    }
+                }
+
+                @media(max-width:1086px) {
+                    display: flex;
+                    flex-wrap: wrap;
                 }
             }
 
@@ -481,6 +599,14 @@ body {
                         height: 32px;
                     }
                 }
+
+                @media (max-width:1086px) {
+                    padding-left: 12px;
+                }
+            }
+
+            @media(max-width:1086px) {
+                padding: 0px;
             }
         }
 
@@ -517,10 +643,25 @@ body {
                             }
                         }
                     }
+
+                    @media (max-width:1086px) {
+                        width: calc(100% / 3);
+                        padding: 0px;
+                    }
+                    @media(max-width:540px) {
+                        width:100%;
+                        padding: 0px;
+                    }
                 }
 
                 .latest-trends {
                     padding-left: 0px;
+
+                }
+
+                @media (max-width:1086px) {
+                    padding: 0px 24px;
+                    flex-wrap: wrap;
                 }
 
             }
@@ -542,6 +683,10 @@ body {
                             text-decoration: underline;
                         }
                     }
+                    @media(max-width:540px) {
+                        margin-bottom: 24px;
+                       
+                    }
                 }
 
                 .microsoft-link {
@@ -561,8 +706,21 @@ body {
                                     text-decoration: underline;
                                 }
                             }
+                            @media(max-width:540px) {
+                                margin-right: 5px;
+                               
+                            }
                         }
                     }
+                }
+
+                @media (max-width:1086px) {
+                    padding: 0px 24px 16px 24px;
+                }
+                @media(max-width:540px) {
+                    padding:0px 24px 20px;
+                    flex-direction:column;
+                   
                 }
 
             }
