--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -10,10 +10,11 @@
 
 body {
     header {
+    
         #nav {
             width: 100%;
             height: 60px;
-            padding: 0px 5%;
+            padding: 0px 8%;
 
             nav {
                 display: flex;
@@ -35,6 +36,7 @@ body {
 
                         img {
                             width: 120px;
+                            
 
 
                         }
@@ -46,40 +48,111 @@ body {
                         &:active {
                             border: 1px dashed #000;
                         }
+                        
+                        
                     }
 
                     .connect {
 
-
-
-
-
-                        li {
-                            float: left;
-                            line-height: 60px;
-                            font-size: 13px;
-                            // margin: 0px 1.5%;
-                            padding: 0px 10px;
-
-                            border: 1px solid rgba($color: #000000, $alpha: 0);
-
-                            a {
-                                color: #000;
-                                text-decoration: none;
+                        ul{
+                            position: relative;
+                            li {
+                                float: left;
+                                line-height: 60px;
+                                font-size: 13px;
+                                // margin: 0px 1.5%;
+                                padding: 0px 10px;
+    
+                                border: 1px solid rgba($color: #000000, $alpha: 0);
+    
+                                a {
+                                    color: #000;
+                                    text-decoration: none;
+                                    
+                                }
+    
+                                &:hover {
+                                    text-decoration: underline;
+                                    text-decoration-thickness: 2px;
+                                    text-underline-offset: 2px;
+    
+                                }
+    
+                                &:active {
+                                    border: 1px dashed #000;
+                                }
+                                
+    
                             }
-
-                            &:hover {
-                                text-decoration: underline;
-                                text-decoration-thickness: 2px;
-                                text-underline-offset: 2px;
-
+                            .help{
+                                @media (max-width:1086px){
+                                    display: none;
+                                }
+                                @media (max-width:860px){
+                                    display: block;
+                                }
                             }
-
-                            &:active {
-                                border: 1px dashed #000;
+                            .xbox{
+                                @media (max-width:1086px){
+                                    display: none;
+                                }
+                                @media (max-width:860px){
+                                    display: block;
+                                }
                             }
+                            #more{
+                                display: none;
+                            }
+                            #more:checked~ul{
+                                display: block;
+                            }
+                            #more:checked+label{
+                                background-color: #f2f2f2;
+                            }
+                            ul{
+                                width: 170px;
+                                position: absolute;
+                                top: 60px;
+                                right: -15px;
+                                background-color: #f2f2f2;
+                                box-shadow: 0px 6px 5px rgb(107, 107, 107);
+                                border-bottom:2px solid black;
+                                z-index: 1;
+                                display: none;
+                                li{
+                                    float: none;
+                                    line-height: 0;
+                                    padding: 18px 0px 18px 24px;
+                                    &:hover{
+                                        cursor: pointer;
+                                    }
+                                }
+                            }
+                            .more{
+                                display: none;
+
+                                
+                                @media (max-width:1086px){
+                                    display: block;
+                                }
+                                @media (max-width:860px){
+                                    display: none;
+                                }
+                            }
+                            // @media (max-width:860px){
+                            //     display: flex;
+                            //     flex-direction: column;
+                            //     z-index: 1;
+                            //     background-color: #e6e5e5;
+                                
+                            // }
                         }
+
+                        
+
+                        
                     }
+                    
 
 
 
@@ -87,22 +160,59 @@ body {
 
                 .search-login {
                     width: 40%;
-                    // height: 60px;
-                    // // background-color: darkgoldenrod;
-                    // float: right;
                     display: flex;
                     justify-content: end;
                     font-size: 13px;
+                    position: relative;
 
-                    .all {
+                    input {
+                        display: none;
+                    }
+                    #check:checked+label{
+                        background-color: #f2f2f2;
+                    }
 
-                        
+                    #check:checked~ul{
+                        display: flex;
+                    }
+                    label{
+                        // @media(max-width:860px){
+                        //     display: none;
+                        // }
+                    }
+
+                    .all-list {
+                        width: 1230px;
+                        position: absolute;
+                        top: 60px;
+                        background-color: #f2f2f2;
+                        z-index: 1;
+                       flex-wrap: wrap;
+                        justify-content: space-between;
+                        box-shadow: 0px 6px 5px rgb(107, 107, 107);
+                        border-bottom:3px solid black;
+                        display: none;
+                        ul {
+                            width: calc(100% / 6);
+
+                            li {
+                                padding: 12px 0px 12px 24px;
+                            }
+                            :first-child{
+                                font-weight:bold;
+                            }
+                            
+                        }
+                        span{
+                            width: 100%;
+                            text-align: center;    
+                            padding: 12px 0px 12px 24px;
+                            background-color: #e6e6e6;
+                        }
                     }
 
                     .link {
-
                         line-height: 60px;
-
                         padding: 0px 10px;
                         border: 1px solid rgba($color: #000000, $alpha: 0);
 
@@ -167,9 +277,20 @@ body {
                             justify-content: center;
                         }
                     }
+                    
 
                 }
+                // @media (max-width:860px) {
+                //     display: block;
+                // }
             }
+            @media (max-width:1400px) {
+                padding: 0px 5%;
+            }
+            @media (max-width:1086px) {
+                padding: 0px 3%;
+            }
+
         }
     }
 
@@ -220,6 +341,7 @@ body {
                         font-size: 15px;
                         padding: 10px 15px;
                     }
+
                     @media(max-width:1086px) {
                         width: 100%;
                         background-color: white;
@@ -228,10 +350,11 @@ body {
                     }
 
                     @media(max-width:860px) {
-                        
+
                         box-shadow: 0px 4px 5px rgba(107, 107, 107, 0.39);
                     }
                 }
+
                 @media(max-width:1086px) {
 
                     position: absolute;
@@ -240,13 +363,20 @@ body {
                     width: 100%;
                     // background-color: rgb(197, 17, 17);
                 }
+
                 @media(max-width:860px) {
 
                     position: unset;
                     padding: 0px;
-                    
+
                 }
 
+            }
+            @media(max-width:1086px) {
+                margin-bottom: 250px;
+            }
+            @media(max-width:860px) {
+                margin-bottom: 20px;
             }
         }
 
@@ -254,22 +384,17 @@ body {
             width: 100%;
             height: 50px;
             background-color: bisque;
-
-            @media(max-width:1086px) {
-                margin-bottom: 200px;
-            }
-            @media(max-width:860px) {
-                display:none;
-            }
+            
         }
 
         .container-top {
             padding-top: 50px;
             margin-bottom: 80px;
+            height: auto;
 
             ul {
                 width: 100%;
-                height: 100px;
+                height: auto;
                 // background-color: burlywood;
                 display: flex;
                 justify-content: center;
@@ -302,13 +427,18 @@ body {
 
 
             }
+
+            @media (max-width:860px) {
+                margin-bottom: 0px;
+            }
+
         }
 
         .container-mid {
             display: flex;
             justify-content: center;
             padding: 0px 5%;
-            margin: 50px 0px;
+            margin: 0px 0px 50px;
 
             .outer-frame {
 
@@ -379,8 +509,9 @@ body {
                         width: calc(100% / 2);
                         padding: 0px 12px;
                     }
+
                     @media(max-width:540px) {
-                        width:100%;
+                        width: 100%;
                         padding: 0px 12px;
                     }
                 }
@@ -428,7 +559,7 @@ body {
                         @media (max-width:1400px) {
                             font-size: 25px;
                         }
-                        
+
                     }
 
                     .describe {
@@ -448,12 +579,13 @@ body {
                         background-color: white;
                         padding: 48px;
                         box-shadow: 0px 0px 8px rgb(107, 107, 107);
-                        
+
                     }
+
                     @media(max-width:860px) {
                         padding: 48px 12px;
                         box-shadow: 0px 0px 0px rgb(107, 107, 107);
-                        
+
                     }
                 }
 
@@ -465,8 +597,10 @@ body {
                     width: 100%;
                     // background-color: rgb(197, 17, 17);
                 }
+
                 @media(max-width:860px) {
-                    position: unset;;
+                    position: unset;
+                    ;
                     padding: 0px;
                     width: 100%;
                     // background-color: rgb(197, 17, 17);
@@ -480,6 +614,7 @@ body {
             @media(max-width:1086px) {
                 margin-bottom: 300px;
             }
+
             @media(max-width:860px) {
                 margin-bottom: 20px;
             }
@@ -568,9 +703,9 @@ body {
                         width: calc(100% / 2);
                         padding: 0px 12px;
                     }
-                    
+
                     @media(max-width:540px) {
-                        width:100%;
+                        width: 100%;
                         padding: 0px 12px;
                     }
                 }
@@ -648,8 +783,9 @@ body {
                         width: calc(100% / 3);
                         padding: 0px;
                     }
+
                     @media(max-width:540px) {
-                        width:100%;
+                        width: 100%;
                         padding: 0px;
                     }
                 }
@@ -670,10 +806,12 @@ body {
                 padding: 0px 5%;
                 display: flex;
                 justify-content: space-between;
-                padding-bottom: 20px;
+                // padding-bottom: 20px;
+                flex-wrap: wrap;
 
                 .earth {
                     font-size: 13px;
+                    margin-bottom: 16px;
 
                     a {
                         color: #616161;
@@ -683,9 +821,10 @@ body {
                             text-decoration: underline;
                         }
                     }
+
                     @media(max-width:540px) {
                         margin-bottom: 24px;
-                       
+
                     }
                 }
 
@@ -695,7 +834,8 @@ body {
                         display: flex;
 
                         li {
-                            margin-right: 24px;
+                            margin-right: 12px;
+                            margin-bottom: 20px;
                             font-size: 11px;
 
                             a {
@@ -706,21 +846,23 @@ body {
                                     text-decoration: underline;
                                 }
                             }
+
                             @media(max-width:540px) {
                                 margin-right: 5px;
-                               
+
                             }
                         }
                     }
                 }
 
                 @media (max-width:1086px) {
-                    padding: 0px 24px 16px 24px;
+                    padding: 0px 24px 0px 24px;
                 }
+
                 @media(max-width:540px) {
-                    padding:0px 24px 20px;
-                    flex-direction:column;
-                   
+                    padding: 0px 24px 20px;
+                    flex-direction: column;
+
                 }
 
             }
